--- a/port/css/style.css
+++ b/port/css/style.css
@@ -1023,21 +1023,21 @@ form button:hover{
    align-items: center;
    justify-content: center;
    min-height: 100vh;
-   background: #101026;
+   background: #030c1f;
    flex-direction: column;
 }
 .text{
     font-size: 45px;
-    color: #f5f5f5;
+    color: #fff;
     margin-bottom: 30px;
 }
 .paragrafo{
-    color: #f5f5f5;
+    color: #fff;
     margin-bottom: 50px;
 }
 .btn{
     padding: 15px 55px;
-    background: #f5f5f5;
+    background: #fff;
     text-decoration: none;
     color: #101026;
     font-size: 18px;
